unpackaged/main/default/objects/Lead/fields/Primary__c.field-meta.xml
<CustomField>
	<fullName>Primary__c</fullName>
	<label>Primary</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>No</fullName>
			</value>
			<value>
				<fullName>Yes</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>