unpackaged/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
	<fullName>ProductInterest__c</fullName>
	<label>Product Interest</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>GC1000 series</fullName>
			</value>
			<value>
				<fullName>GC5000 series</fullName>
			</value>
			<value>
				<fullName>GC3000 series</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>