unpackaged/main/default/objects/Lead/listViews/AllOpenLeads.listView-meta.xml
<ListView>
	<fullName>AllOpenLeads</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>LEAD.STATUS</field>
		<operation>notContain</operation>
		<value>closed</value>
	</filters>
	<label>All Open Leads</label>
</ListView>