unpackaged/main/default/objects/Lead/listViews/MyUnreadLeads.listView-meta.xml
<ListView>
	<fullName>MyUnreadLeads</fullName>
	<filterScope>Mine</filterScope>
	<filters>
		<field>LEAD.UNREAD</field>
		<operation>equals</operation>
		<value>1</value>
	</filters>
	<label>My Unread Leads</label>
</ListView>