unpackaged/main/default/objects/Lead/listViews/TodaysLeads.listView-meta.xml
<ListView>
	<fullName>TodaysLeads</fullName>
	<filterScope>Everything</filterScope>
	<filters>
		<field>LEAD.CREATED_DATE</field>
		<operation>equals</operation>
		<value>TODAY</value>
	</filters>
	<label>Today&#39;s Leads</label>
</ListView>