unpackaged/main/default/objects/Lead/listViews/ViewCustom1.listView-meta.xml
<ListView>
	<fullName>ViewCustom1</fullName>
	<columns>FULL_NAME</columns>
	<columns>LEAD.COMPANY</columns>
	<columns>LEAD.STATE</columns>
	<columns>LEAD.EMAIL</columns>
	<columns>LEAD.STATUS</columns>
	<columns>LEAD.CREATED_DATE</columns>
	<columns>CORE.USERS.ALIAS</columns>
	<columns>LEAD.UNREAD</columns>
	<filterScope>Everything</filterScope>
	<label>View - Custom 1</label>
</ListView>