unpackaged/main/default/objects/Lead/listViews/ViewCustom2.listView-meta.xml
<ListView>
	<fullName>ViewCustom2</fullName>
	<columns>FULL_NAME</columns>
	<columns>LEAD.COMPANY</columns>
	<columns>LEAD.STATE</columns>
	<columns>LEAD.EMAIL</columns>
	<columns>LEAD.STATUS</columns>
	<columns>LEAD.CREATED_DATE</columns>
	<columns>CORE.USERS.ALIAS</columns>
	<columns>LEAD.UNREAD</columns>
	<columns>LEAD.LEAD_SOURCE</columns>
	<filterScope>Everything</filterScope>
	<label>View - Custom 2</label>
</ListView>